--- a/assets/src/css/pills-skin.scss
+++ b/assets/src/css/pills-skin.scss
@@ -9,6 +9,9 @@
 		background-color: var(--rtgodam-control-bar-color, #000) !important;
 		bottom: 0.5rem !important;
 		z-index: 19;
+
+		/* Add horizontal padding to prevent controls from touching the edges of the pill shape */
+		padding: 0 10px;
 	}
 
 	.video-js .vjs-big-play-button {
@@ -27,6 +30,8 @@
 
 	.vjs-current-time {
 		display: flex;
+
+		/* Add left padding to separate time from the volume control in Pills skin */
 		padding: 0 0 0 15px;
 		align-items: center;
 		justify-content: center;
